exports[`test Enter key selects the current highlighted item when list is active 1`] = `
<Connect(UI)
  active={true}
  highlightBackgroundColor="blue"
  highlightColor="white"
  highlightedIndex={1}
  onSelectItem={[Function]}>
  <UI
    active={true}
    highlightBackgroundColor="blue"
    highlightColor="white"
    highlightedIndex={1}
    massUpdateUI={[Function]}
    mountUI={[Function]}
    onSelectItem={[Function]}
    setDefaultUI={[Function]}
    ui={
      Object {
        "Component": Object {
          "highlightedIndex": null,
          "keyboardTriggered": false,
        },
        "__reducers": Object {},
      }
    }
    unmountUI={[Function]}
    updateUI={[Function]}>
    <List
      active={true}
      highlightBackgroundColor="blue"
      highlightColor="white"
      highlightedIndex={1}
      massUpdateUI={[Function]}
      mountUI={[Function]}
      onHighlightItem={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onSelectItem={[Function]}
      resetUI={[Function]}
      setDefaultUI={[Function]}
      ui={
        Object {
          "highlightedIndex": null,
          "keyboardTriggered": false,
        }
      }
      uiKey="List-0"
      uiPath={
        Array [
          "List-0",
        ]
      }
      unmountUI={[Function]}
      updateUI={[Function]}>
      <div
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "backgroundColor": "white",
            "fontFamily": "\'Proxima Nova\', \'Lucida Sans Unicode\', \'Lucida Grande\', sans-serif",
            "fontSize": 14,
            "maxHeight": false,
            "overflow": "auto",
          }
        }>
        <EventListener
          capture={false}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          target="window" />
        <div
          onClick={[Function]}>
          <SubHeader>
            <header
              data-radium={true}
              style={
                Object {
                  "backgroundColor": "rgba(0,0,0,0)",
                  "borderBottom": "1px dashed #a6a6a6",
                  "color": "#a6a6a6",
                  "padding": "6px 12px",
                  "textTransform": "uppercase",
                }
              }>
              Hello world
            </header>
          </SubHeader>
        </div>
        <div
          onClick={[Function]}>
          <ListItem
            highlightBackgroundColor="blue"
            highlightColor="white"
            highlighted={true}
            itemOid={0}
            onMouseEnter={[Function]}>
            <div
              data-radium={true}
              onMouseEnter={[Function]}
              style={
                Object {
                  "backgroundColor": "blue",
                  "color": "white",
                  "cursor": "pointer",
                  "padding": "6px 12px",
                }
              }>
              List
            </div>
          </ListItem>
        </div>
        <div
          onClick={[Function]}>
          <ListItem
            highlightBackgroundColor="blue"
            highlightColor="white"
            highlighted={false}
            itemOid={1}
            onMouseEnter={[Function]}>
            <div
              data-radium={true}
              onMouseEnter={[Function]}
              style={
                Object {
                  "backgroundColor": "rgba(0,0,0,0)",
                  "color": "initial",
                  "cursor": "pointer",
                  "padding": "6px 12px",
                }
              }>
              Items
            </div>
          </ListItem>
        </div>
      </div>
    </List>
  </UI>
</Connect(UI)>
`;

exports[`test Holding the down arrow key moves highlighted item down to next highlight-able item when list is active 1`] = `
<Connect(UI)
  active={true}
  highlightBackgroundColor="blue"
  highlightColor="white"
  highlightedIndex={2}
  onHighlightItem={[Function]}>
  <UI
    active={true}
    highlightBackgroundColor="blue"
    highlightColor="white"
    highlightedIndex={2}
    massUpdateUI={[Function]}
    mountUI={[Function]}
    onHighlightItem={[Function]}
    setDefaultUI={[Function]}
    ui={
      Object {
        "Component": Object {
          "highlightedIndex": 4,
          "keyboardTriggered": true,
        },
        "__reducers": Object {},
      }
    }
    unmountUI={[Function]}
    updateUI={[Function]}>
    <List
      active={true}
      highlightBackgroundColor="blue"
      highlightColor="white"
      highlightedIndex={2}
      massUpdateUI={[Function]}
      mountUI={[Function]}
      onHighlightItem={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onSelectItem={[Function]}
      resetUI={[Function]}
      setDefaultUI={[Function]}
      ui={
        Object {
          "highlightedIndex": 4,
          "keyboardTriggered": true,
        }
      }
      uiKey="List-0"
      uiPath={
        Array [
          "List-0",
        ]
      }
      unmountUI={[Function]}
      updateUI={[Function]}>
      <div
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "backgroundColor": "white",
            "fontFamily": "\'Proxima Nova\', \'Lucida Sans Unicode\', \'Lucida Grande\', sans-serif",
            "fontSize": 14,
            "maxHeight": false,
            "overflow": "auto",
          }
        }>
        <EventListener
          capture={false}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          target="window" />
        <div
          onClick={[Function]}>
          <SubHeader>
            <header
              data-radium={true}
              style={
                Object {
                  "backgroundColor": "rgba(0,0,0,0)",
                  "borderBottom": "1px dashed #a6a6a6",
                  "color": "#a6a6a6",
                  "padding": "6px 12px",
                  "textTransform": "uppercase",
                }
              }>
              Hello world
            </header>
          </SubHeader>
        </div>
        <div
          onClick={[Function]}>
          <ListItem
            highlightBackgroundColor="blue"
            highlightColor="white"
            highlighted={false}
            itemOid={0}
            onMouseEnter={[Function]}>
            <div
              data-radium={true}
              onMouseEnter={[Function]}
              style={
                Object {
                  "backgroundColor": "rgba(0,0,0,0)",
                  "color": "initial",
                  "cursor": "pointer",
                  "padding": "6px 12px",
                }
              }>
              List
            </div>
          </ListItem>
        </div>
        <div
          onClick={[Function]}>
          <ListItem
            highlightBackgroundColor="blue"
            highlightColor="white"
            highlighted={false}
            itemOid={1}
            onMouseEnter={[Function]}>
            <div
              data-radium={true}
              onMouseEnter={[Function]}
              style={
                Object {
                  "backgroundColor": "rgba(0,0,0,0)",
                  "color": "initial",
                  "cursor": "pointer",
                  "padding": "6px 12px",
                }
              }>
              Items
            </div>
          </ListItem>
        </div>
        <div
          onClick={[Function]}>
          <SubHeader>
            <header
              data-radium={true}
              style={
                Object {
                  "backgroundColor": "rgba(0,0,0,0)",
                  "borderBottom": "1px dashed #a6a6a6",
                  "color": "#a6a6a6",
                  "padding": "6px 12px",
                  "textTransform": "uppercase",
                }
              }>
              Hello world
            </header>
          </SubHeader>
        </div>
        <div
          onClick={[Function]}>
          <ListItem
            highlightBackgroundColor="blue"
            highlightColor="white"
            highlighted={true}
            itemOid={0}
            onMouseEnter={[Function]}>
            <div
              data-radium={true}
              onMouseEnter={[Function]}
              style={
                Object {
                  "backgroundColor": "blue",
                  "color": "white",
                  "cursor": "pointer",
                  "padding": "6px 12px",
                }
              }>
              List
            </div>
          </ListItem>
        </div>
        <div
          onClick={[Function]}>
          <ListItem
            highlightBackgroundColor="blue"
            highlightColor="white"
            highlighted={false}
            itemOid={1}
            onMouseEnter={[Function]}>
            <div
              data-radium={true}
              onMouseEnter={[Function]}
              style={
                Object {
                  "backgroundColor": "rgba(0,0,0,0)",
                  "color": "initial",
                  "cursor": "pointer",
                  "padding": "6px 12px",
                }
              }>
              Items
            </div>
          </ListItem>
        </div>
      </div>
    </List>
  </UI>
</Connect(UI)>
`;

exports[`test Holding the up arrow key moves highlighted item up to next highlight-able item when list is active 1`] = `
<Connect(UI)
  active={true}
  highlightBackgroundColor="blue"
  highlightColor="white"
  highlightedIndex={4}
  onHighlightItem={[Function]}>
  <UI
    active={true}
    highlightBackgroundColor="blue"
    highlightColor="white"
    highlightedIndex={4}
    massUpdateUI={[Function]}
    mountUI={[Function]}
    onHighlightItem={[Function]}
    setDefaultUI={[Function]}
    ui={
      Object {
        "Component": Object {
          "highlightedIndex": 2,
          "keyboardTriggered": true,
        },
        "__reducers": Object {},
      }
    }
    unmountUI={[Function]}
    updateUI={[Function]}>
    <List
      active={true}
      highlightBackgroundColor="blue"
      highlightColor="white"
      highlightedIndex={4}
      massUpdateUI={[Function]}
      mountUI={[Function]}
      onHighlightItem={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onSelectItem={[Function]}
      resetUI={[Function]}
      setDefaultUI={[Function]}
      ui={
        Object {
          "highlightedIndex": 2,
          "keyboardTriggered": true,
        }
      }
      uiKey="List-0"
      uiPath={
        Array [
          "List-0",
        ]
      }
      unmountUI={[Function]}
      updateUI={[Function]}>
      <div
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "backgroundColor": "white",
            "fontFamily": "\'Proxima Nova\', \'Lucida Sans Unicode\', \'Lucida Grande\', sans-serif",
            "fontSize": 14,
            "maxHeight": false,
            "overflow": "auto",
          }
        }>
        <EventListener
          capture={false}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          target="window" />
        <div
          onClick={[Function]}>
          <SubHeader>
            <header
              data-radium={true}
              style={
                Object {
                  "backgroundColor": "rgba(0,0,0,0)",
                  "borderBottom": "1px dashed #a6a6a6",
                  "color": "#a6a6a6",
                  "padding": "6px 12px",
                  "textTransform": "uppercase",
                }
              }>
              Hello world
            </header>
          </SubHeader>
        </div>
        <div
          onClick={[Function]}>
          <ListItem
            highlightBackgroundColor="blue"
            highlightColor="white"
            highlighted={false}
            itemOid={0}
            onMouseEnter={[Function]}>
            <div
              data-radium={true}
              onMouseEnter={[Function]}
              style={
                Object {
                  "backgroundColor": "rgba(0,0,0,0)",
                  "color": "initial",
                  "cursor": "pointer",
                  "padding": "6px 12px",
                }
              }>
              List
            </div>
          </ListItem>
        </div>
        <div
          onClick={[Function]}>
          <ListItem
            highlightBackgroundColor="blue"
            highlightColor="white"
            highlighted={true}
            itemOid={1}
            onMouseEnter={[Function]}>
            <div
              data-radium={true}
              onMouseEnter={[Function]}
              style={
                Object {
                  "backgroundColor": "blue",
                  "color": "white",
                  "cursor": "pointer",
                  "padding": "6px 12px",
                }
              }>
              Items
            </div>
          </ListItem>
        </div>
        <div
          onClick={[Function]}>
          <SubHeader>
            <header
              data-radium={true}
              style={
                Object {
                  "backgroundColor": "rgba(0,0,0,0)",
                  "borderBottom": "1px dashed #a6a6a6",
                  "color": "#a6a6a6",
                  "padding": "6px 12px",
                  "textTransform": "uppercase",
                }
              }>
              Hello world
            </header>
          </SubHeader>
        </div>
        <div
          onClick={[Function]}>
          <ListItem
            highlightBackgroundColor="blue"
            highlightColor="white"
            highlighted={false}
            itemOid={0}
            onMouseEnter={[Function]}>
            <div
              data-radium={true}
              onMouseEnter={[Function]}
              style={
                Object {
                  "backgroundColor": "rgba(0,0,0,0)",
                  "color": "initial",
                  "cursor": "pointer",
                  "padding": "6px 12px",
                }
              }>
              List
            </div>
          </ListItem>
        </div>
        <div
          onClick={[Function]}>
          <ListItem
            highlightBackgroundColor="blue"
            highlightColor="white"
            highlighted={false}
            itemOid={1}
            onMouseEnter={[Function]}>
            <div
              data-radium={true}
              onMouseEnter={[Function]}
              style={
                Object {
                  "backgroundColor": "rgba(0,0,0,0)",
                  "color": "initial",
                  "cursor": "pointer",
                  "padding": "6px 12px",
                }
              }>
              Items
            </div>
          </ListItem>
        </div>
      </div>
    </List>
  </UI>
</Connect(UI)>
`;

exports[`test List can have a specified highlight color for its ListItems 1`] = `
<UI
  highlightBackgroundColor="blue"
  highlightColor="white"
  massUpdateUI={[Function]}
  mountUI={[Function]}
  setDefaultUI={[Function]}
  ui={
    Object {
      "__reducers": Object {},
    }
  }
  unmountUI={[Function]}
  updateUI={[Function]}>
  <SubHeader>
    Hello world
  </SubHeader>
  <ListItem
    highlighted={false}
    itemOid={0}
    onMouseEnter={[Function]}>
    List
  </ListItem>
  <ListItem
    highlighted={false}
    itemOid={1}
    onMouseEnter={[Function]}>
    Items
  </ListItem>
</UI>
`;

exports[`test List can render ListItems 1`] = `
<UI
  massUpdateUI={[Function]}
  mountUI={[Function]}
  setDefaultUI={[Function]}
  ui={
    Object {
      "__reducers": Object {},
    }
  }
  unmountUI={[Function]}
  updateUI={[Function]}>
  <SubHeader>
    Hello world
  </SubHeader>
  <ListItem
    highlighted={false}
    itemOid={0}
    onMouseEnter={[Function]}>
    List
  </ListItem>
  <ListItem
    highlighted={false}
    itemOid={1}
    onMouseEnter={[Function]}>
    Items
  </ListItem>
</UI>
`;

exports[`test List can render ListItems with scroll bar 1`] = `
<Connect(UI)
  maxHeight={50}>
  <UI
    massUpdateUI={[Function]}
    maxHeight={50}
    mountUI={[Function]}
    setDefaultUI={[Function]}
    ui={
      Object {
        "Component": Object {
          "highlightedIndex": null,
          "keyboardTriggered": false,
        },
        "__reducers": Object {},
      }
    }
    unmountUI={[Function]}
    updateUI={[Function]}>
    <List
      active={false}
      highlightBackgroundColor="#262626"
      highlightColor="#fff"
      massUpdateUI={[Function]}
      maxHeight={50}
      mountUI={[Function]}
      onHighlightItem={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onSelectItem={[Function]}
      resetUI={[Function]}
      setDefaultUI={[Function]}
      ui={
        Object {
          "highlightedIndex": null,
          "keyboardTriggered": false,
        }
      }
      uiKey="List-0"
      uiPath={
        Array [
          "List-0",
        ]
      }
      unmountUI={[Function]}
      updateUI={[Function]}>
      <div
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "backgroundColor": "white",
            "fontFamily": "\'Proxima Nova\', \'Lucida Sans Unicode\', \'Lucida Grande\', sans-serif",
            "fontSize": 14,
            "maxHeight": "50px",
            "overflow": "auto",
          }
        }>
        <EventListener
          capture={false}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          target="window" />
        <div
          onClick={[Function]}>
          <SubHeader>
            <header
              data-radium={true}
              style={
                Object {
                  "backgroundColor": "rgba(0,0,0,0)",
                  "borderBottom": "1px dashed #a6a6a6",
                  "color": "#a6a6a6",
                  "padding": "6px 12px",
                  "textTransform": "uppercase",
                }
              }>
              Hello world
            </header>
          </SubHeader>
        </div>
        <div
          onClick={[Function]}>
          <ListItem
            highlightBackgroundColor="#262626"
            highlightColor="#fff"
            highlighted={false}
            itemOid={0}
            onMouseEnter={[Function]}>
            <div
              data-radium={true}
              onMouseEnter={[Function]}
              style={
                Object {
                  "backgroundColor": "rgba(0,0,0,0)",
                  "color": "initial",
                  "cursor": "pointer",
                  "padding": "6px 12px",
                }
              }>
              List
            </div>
          </ListItem>
        </div>
        <div
          onClick={[Function]}>
          <ListItem
            highlightBackgroundColor="#262626"
            highlightColor="#fff"
            highlighted={false}
            itemOid={1}
            onMouseEnter={[Function]}>
            <div
              data-radium={true}
              onMouseEnter={[Function]}
              style={
                Object {
                  "backgroundColor": "rgba(0,0,0,0)",
                  "color": "initial",
                  "cursor": "pointer",
                  "padding": "6px 12px",
                }
              }>
              Items
            </div>
          </ListItem>
        </div>
      </div>
    </List>
  </UI>
</Connect(UI)>
`;

exports[`test List's highlighted item can be set 1`] = `
<UI
  highlightBackgroundColor="blue"
  highlightColor="white"
  massUpdateUI={[Function]}
  mountUI={[Function]}
  setDefaultUI={[Function]}
  ui={
    Object {
      "__reducers": Object {},
    }
  }
  unmountUI={[Function]}
  updateUI={[Function]}>
  <SubHeader>
    Hello world
  </SubHeader>
  <ListItem
    highlighted={false}
    itemOid={0}
    onMouseEnter={[Function]}>
    List
  </ListItem>
  <ListItem
    highlighted={false}
    itemOid={1}
    onMouseEnter={[Function]}>
    Items
  </ListItem>
</UI>
`;

exports[`test List's list items are highlighted when hovered over 1`] = `
<UI
  highlightBackgroundColor="blue"
  highlightColor="white"
  massUpdateUI={[Function]}
  mountUI={[Function]}
  setDefaultUI={[Function]}
  ui={
    Object {
      "__reducers": Object {},
    }
  }
  unmountUI={[Function]}
  updateUI={[Function]}>
  <SubHeader>
    Hello world
  </SubHeader>
  <ListItem
    highlighted={false}
    itemOid={0}
    onMouseEnter={[Function]}>
    List
  </ListItem>
  <ListItem
    highlighted={false}
    itemOid={1}
    onMouseEnter={[Function]}>
    Items
  </ListItem>
</UI>
`;
